compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__functions__bad_body_function_fault_tolerance.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\npub fn bad(x: Int) -> Float {\n  // Invalid body.\n  \"\" + \"\"\n}\n\npub fn user() -> Float {\n  // This checks that the bad function is still usable, the types coming from\n  // its annotations. This function is valid.\n  bad(1)\n}\n\n// Another bad function to make sure that analysis has not stopped. This error\n// should also be emitted.\npub fn bad_2() {\n  bad(Nil)\n}\n"
---
----- SOURCE CODE

pub fn bad(x: Int) -> Float {
  // Invalid body.
  "" + ""
}

pub fn user() -> Float {
  // This checks that the bad function is still usable, the types coming from
  // its annotations. This function is valid.
  bad(1)
}

// Another bad function to make sure that analysis has not stopped. This error
// should also be emitted.
pub fn bad_2() {
  bad(Nil)
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:3
  │
4 │   "" + ""
  │   ^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    String

Hint: Strings can be joined using the `append` or `concat` functions from the
`gleam/string` module.

error: Type mismatch
   ┌─ /src/one/two.gleam:16:7
   │
16 │   bad(Nil)
   │       ^^^

Expected type:

    Int

Found type:

    Nil
