compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__functions__case_subject_fault_tolerance.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\npub fn main() {\n  case 1.0 + 1.0, 2.0 + 2.0 {\n    _, _ -> 0\n  }\n}\n"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:3:8
  │
3 │   case 1.0 + 1.0, 2.0 + 2.0 {
  │        ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats


error: Type mismatch
  ┌─ /src/one/two.gleam:3:19
  │
3 │   case 1.0 + 1.0, 2.0 + 2.0 {
  │                   ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats
